Mudanças de formulario, melhorias de design, melhoria de variaveis e etc.

--- a/app/views/Atendimentos/listar.html
+++ b/app/views/Atendimentos/listar.html
@@ -10,3 +10,5 @@
 		<li>Nenhum projeto cadastrado</li>
 	#{/else}
 </ul>
+</br>
+<a class="btn btn-primary" href="@{Pessoas.form}">Voltar a Página inicial</a>
