--- a/app/views/Logins/form.html
+++ b/app/views/Logins/form.html
@@ -16,3 +16,5 @@
 	<input class="btn btn-primary" type="submit"
 		value="Logar" />
 </form>
+</br>
+<a class="btn btn-primary" href="@{Pessoas.form}">Voltar a Página inicial</a>
