--- a/app/views/Pessoas/detalhar.html
+++ b/app/views/Pessoas/detalhar.html
@@ -12,5 +12,5 @@
 <h5>Descrição do Problema</h5>
 <p>${pessoa.textoProblem}</p>
 
-<a class="btn btn-primary" href="@{Pessoas.form}">Cadastrar novo</a>
+<a class="btn btn-primary" href="@{Pessoas.form}">Voltar a Página inicial</a>
 <a class="btn btn-secondary" href="@{Pessoas.listar}">Listagem</a>
