--- a/app/views/main.html
+++ b/app/views/main.html
@@ -77,18 +77,25 @@
             <li><a href="#about">Sobre</a></li>
             <li><a href="#services">Serviços</a></li>
             <li><a href="#departments">Erros frequentes</a></li>
-            <li><a href="#doctors">Responsaveis</a></li>
+			<li><a href="#faqd">Perguntas frequentes</a></li>
+			<i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <li><a href="#contact">Contato</a></li>
-          </ul>
+			<li class="dropdown">
+			<a><span>Fazer Login</span> 
+				<ul>
+					#{if session['usuarioLogado']}
+					<li><a aria-expanded="false">
+					<i class="bi bi-person"></i> ${session['usuarioLogado']}</a>
+				    <li><a class="dropdown-item text-danger" href="@{Logins.logout}">Sair</a></li>
+				    </ul>
+					#{/if}
+					#{else}
+					<a href="@{Logins.logar()}">Login</a>
+						    #{/else}    
+					</li>
+					</ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
-
-       <a class="cta-btn d-none d-sm-block" href="@{Logins.logar()}"
-					class="login-link"> Login</a>
-
-      </div>
-
-    </div>
 
   </header> 
 
@@ -108,14 +115,6 @@
         </div>
     </div>
   #{/if}
-  
-  #{if session['usuarioLogado']}
-    <div class="container text-end">
-        <small>Logado como: ${session['usuarioLogado']}</small> 
-        <a href="@{Logins.logout}" class="btn btn-sm btn-outline-danger ms-2">Sair</a>
-    </div>
-  #{/if}
-
   #{doLayout /}
 
   <footer id="footer" class="footer light-background">
@@ -211,14 +210,15 @@
     <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
     <!-- Vendor JS Files -->
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
-    <script src="assets/vendor/aos/aos.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="@{'/public/MediLab-1.0.0/MediLab-1.0.0/assets/vendor/bootstrap/js/bootstrap.bundle.min.js'}"></script>
+    <script src="@{'/public/MediLab-1.0.0/MediLab-1.0.0/assets/vendor/php-email-form/validate.js'}"></script>
+    <script src="@{'/public/MediLab-1.0.0/MediLab-1.0.0/assets/vendor/aos/aos.js'}"></script>
+    <script src="@{'/public/MediLab-1.0.0/MediLab-1.0.0/assets/vendor/glightbox/js/glightbox.min.js'}"></script>
+    <script src="@{'/public/MediLab-1.0.0/MediLab-1.0.0/assets/vendor/purecounter/purecounter_vanilla.js'}"></script>
+    <script src="@{'/public/MediLab-1.0.0/MediLab-1.0.0/assets/vendor/swiper/swiper-bundle.min.js'}"></script>
 
     <!-- Main JS File -->
-    <script src="assets/js/main.js"></script>
+	<script src="@{'/public/bootstrap-5.3.6/js/bootstrap.bundle.min.js'}"></script>
+	<script src="@{'/public/MediLab-1.0.0/MediLab-1.0.0/assets/js/main.js'}"></script>
 
   </html>
